# claude-skill-manager

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  post-install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yaml
agents/: csm-builder.md  csm-daemon.md  csm-evaluator.md  csm-proposer.md  csm-researcher.md  csm-scout.md
apps/api/: main.py
apps/cli/: main.py
apps/web/: index.html  package.json
apps/web/src/: main.tsx
apps/web/src/components/: ItemTable.tsx  Layout.tsx  (+1 more)
commands/: csm-daemon.md  csm-find.md  csm-stop.md  csm.md
docs/: architecture.md  data-model.md  development.md  registry.md  roadmap.md  security-model.md
docs/adr/: 001-local-first.md  002-proposal-driven-changes.md  003-registry-as-source-of-truth.md
hooks/: hooks.json
hooks/scripts/: daemon-setup.sh  daemon-stop-hook.sh  divan-bridge.sh  queue-request.sh  session-start.sh
registry/: candidates.yaml  installed.yaml  policies.yaml  rejected.yaml  sources.yaml  taxonomy.yaml
registry/evaluations/: eval-plugin-obsidian-mcp.yaml  eval-plugin-playwright-mcp.yaml  eval-skill-arxiv-reader.yaml
registry/proposals/: proposal-plugin-obsidian-mcp-20260409-111357.yaml  proposal-plugin-playwright-mcp-20260409-111357.yaml  proposal-skill-arxiv-reader-20260409-111357.yaml
scripts/: csm  start-daemon.sh
skills/csm-ecosystem-advisor/: SKILL.md
skills/csm-find-skill/: SKILL.md
skills/csm-manage-stack/: SKILL.md
tests/: conftest.py  test_diff.py  test_evaluator.py  test_proposal.py  test_registry.py  test_snapshot.py
(+8 files in other folders)
